# femtoclaw-protocol

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  message.rs  schema.rs  validation.rs
