[package]
name = "femtoclaw-protocol"
version = "1.0.2"
edition = "2021"
license = "Apache-2.0"
description = "FemtoClaw Protocol Validation — strict JSON schema validation for runtime messages"
repository = "https://github.com/femtoclaw/femtoclaw-protocol.git"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
